plugins {
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
    id 'pmd'
    id "com.github.spotbugs" version "5.0.14"
    id "org.openapi.generator" version "6.5.0"
}

group = 'org.railwaystations'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = "20"
    targetCompatibility = "20"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

bootJar {
    mainClass.set('org.railwaystations.rsapi.app.RsapiApplication')
}

openApiValidate {
    inputSpec = "$rootDir/src/main/resources/static/openapi.yaml".toString()
    recommend = true
}

openApiGenerate {
    generatorName = "spring"
    inputSpec = "$rootDir/src/main/resources/static/openapi.yaml".toString()
    outputDir = "$buildDir/openapi".toString()
    apiPackage = "org.railwaystations.rsapi.adapter.in.web.api"
    modelPackage = "org.railwaystations.rsapi.adapter.in.web.model"
    modelNameSuffix = "Dto"
    cleanupOutput = true
    configOptions = [
            interfaceOnly        : "true",
            useSpringController  : "true",
            openApiNullable      : "false",
            skipDefaultInterface : "true",
            dateLibrary          : "java8",
            documentationProvider: "none",
            annotationLibrary    : "none",
            useTags              : "true",
            useBeanValidation    : "true",
            useSpringBoot3       : "true",
            implicitHeadersRegex : "(Authorization|Upload-Token|Email)"
    ]
}

sourceSets.main.java.srcDirs += 'build/openapi/src/main/java'

compileJava.dependsOn tasks.openApiGenerate

ext {
    testContainersVersion = '1.18.0'
    jdbiVersion = '3.38.0'
    swaggerRequestValidatorVersion = '2.34.1'
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
    implementation "org.springframework.security:spring-security-oauth2-authorization-server:1.0.2"
    implementation 'org.liquibase:liquibase-core:4.21.1'
    implementation "org.jdbi:jdbi3-spring5:$jdbiVersion"
    implementation "org.jdbi:jdbi3-sqlobject:$jdbiVersion"
    implementation "com.goterl:lazysodium-java:5.1.4"
    implementation "net.java.dev.jna:jna:5.13.0"
    implementation "commons-codec:commons-codec:1.15"
    implementation "commons-io:commons-io:2.11.0"
    implementation "org.apache.commons:commons-lang3:3.12.0"
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.9'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    implementation 'org.webjars:bootstrap:5.2.3'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly "org.mariadb.jdbc:mariadb-java-client:3.1.3"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.security:spring-security-test"
    testImplementation "org.awaitility:awaitility:4.2.0"
    testImplementation "org.testcontainers:testcontainers:$testContainersVersion"
    testImplementation "org.testcontainers:junit-jupiter:$testContainersVersion"
    testImplementation "org.testcontainers:mariadb:$testContainersVersion"
    testImplementation "com.atlassian.oai:swagger-request-validator-core:$swaggerRequestValidatorVersion"
    testImplementation "com.atlassian.oai:swagger-request-validator-spring-webmvc:$swaggerRequestValidatorVersion"
    testImplementation "com.atlassian.oai:swagger-request-validator-mockmvc:$swaggerRequestValidatorVersion"
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.xmlunit:xmlunit-assertj3:2.9.1'
    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
    testImplementation 'org.mockito:mockito-core:5.3.1'
}

test {
    useJUnitPlatform()
}

pmd {
    ruleSets = ["category/java/errorprone.xml", "category/java/bestpractices.xml"]
    ignoreFailures = true
}

spotbugs {
    ignoreFailures.set(true)
}

spotbugsTest {
    ignoreFailures = true
}
